--- a/src/styles/MovieList.css
+++ b/src/styles/MovieList.css
@@ -1,10 +1,10 @@
-.movie-container1{
-
+.movie-container{
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   gap:16px ;
   margin: 0 auto;
+ 
   
 }
 
